gcc/testsuite/rust/rustc/ui/pub/pub-ident-struct-4.rs
//@ run-rustfix

pub T(#[allow(dead_code)] String);
// { dg-error "" "" { target *-*-* } .-1 }

fn main() {}

